--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,28 +9,38 @@ import Layout from "../layouts/Layout.astro";
   className="flex h-svh max-w-sm flex-col justify-center"
 >
   <main class="space-y-4">
+    <img src="/static/bhante.png" alt="Bhante Guṇavīro" class="rounded-lg" />
     <p>
-      Miniblog is an opinionated and extremely minimal blogging template built
-      with <a
-        href="https://astro.build/"
-        target="_blank"
-        class="text-blue-500 underline">Astro</a
-      > and <a
-        href="https://tailwindcss.com/"
-        target="_blank"
-        class="text-blue-500 underline">Tailwind</a
+      Welcome to our community website dedicated to following and supporting <span
+        class="font-semibold">Guṇavīro Bhikkhu</span
       >.
     </p>
+
     <p>
-      Design heavily inspired by <a
-        href="https://jrmyphlmn.com/"
-        target="_blank"
-        class="text-blue-500 underline">jrmyphlmn.com</a
-      >.
+      Organized and maintained by lay supporters, it offers news, updates, and
+      guidance for those who wish to stay connected with his journey and support
+      his practice.
     </p>
     <p>
-      To use this template, check out the <a
-        href="https://github.com/nicholasdly/miniblog?tab=readme-ov-file"
+      For a list of all recent articles, please visit the <a
+        href="/posts"
+        class="text-blue-500 underline">Posts</a
+      > page.
+    </p>
+    <p>
+      For questions, offerings of support, or to join our WhatsApp group, please
+      email <a href="mailto:bgkappiya@gmail.com" class="text-blue-500 underline"
+        >bgkappiya@gmail.com</a
+      >.
+    </p>
+
+    <p>
+      A lay supporter will do their best to convey your message to Bhante when
+      possible, though he may sometimes be on retreat or unavailable.
+    </p>
+    <p>
+      This website is open-source, and you can find the code on our <a
+        href="https://github.com/BG-Kappiya/gunaviro-bhikkhu"
         target="_blank"
         class="text-blue-500 underline">GitHub repository</a
       >.
