--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,6 +7,8 @@ import ThemeToggle from "./ThemeToggle.astro";
   <nav class="flex items-center gap-4">
     <a href="/"> home </a>
     <a href="/posts"> posts </a>
+    <a href="/support"> location </a>
+    <a href="/faq"> faq </a>
     <a href={`mailto:${EMAIL}`}>email</a>
   </nav>
   <ThemeToggle />
