--- a/src/components/Accordion.astro
+++ b/src/components/Accordion.astro
@@ -1,10 +1,9 @@
 ---
 interface Props {
   title: string;
-  details: string;
 }
 
-const { title, details } = Astro.props as Props;
+const { title } = Astro.props as Props;
 ---
 
 <div class="accordion group relative rounded-md border border-purple-900">
@@ -38,9 +37,9 @@ const { title, details } = Astro.props as Props;
     aria-labelledby={`${title} accordion menu button`}
     class="accordion__content hidden max-h-0 overflow-hidden px-3 transition-all duration-300 ease-in-out sm:px-4"
   >
-    <p class="prose mb-4 mt-1 max-w-full transition-[height]">
-      {details}
-    </p>
+    <article class="prose mb-4 mt-1 max-w-full transition-[height]">
+      <slot />
+    </article>
   </div>
 </div>
 
