--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -1,12 +1,10 @@
 ---
 import { getCollection } from "astro:content";
-import Accordion from "../../components/Accordion.astro";
-import { SITE_DESCRIPTION, SITE_TITLE } from "../../consts";
-import Layout from "../../layouts/Layout.astro";
+import Accordion from "../components/Accordion.astro";
+import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
+import Layout from "../layouts/Layout.astro";
 const collection = await getCollection("faq");
-const faqs = collection.sort(
-  (a, b) => b.data.date.valueOf() - a.data.date.valueOf()
-);
+const faqs = collection.sort((a, b) => a.data.order - b.data.order);
 ---
 
 <Layout title={SITE_TITLE} description={SITE_DESCRIPTION}>
@@ -16,7 +14,9 @@ const faqs = collection.sort(
         faqs.map(async (faq) => {
           const { Content } = await faq.render();
           return (
-            <Accordion title={faq.data.title} details={faq.data.description} />
+            <Accordion title={faq.data.title}>
+              <Content />
+            </Accordion>
           );
         })
       }
