Structure looking bueno

--- a/src/components/Accordion.astro
+++ b/src/components/Accordion.astro
@@ -6,9 +6,9 @@ interface Props {
 const { title } = Astro.props as Props;
 ---
 
-<div class="accordion group relative rounded-md border border-purple-900">
+<div class="accordion group relative rounded-md border border-[#CC5500]">
   <button
-    class="accordion__button flex w-full flex-1 items-center justify-between gap-2 p-3 text-left font-medium transition hover:text-purple-500 sm:px-4"
+    class="accordion__button flex w-full flex-1 items-center justify-between gap-2 p-3 text-left font-medium transition hover:text-[#CC5500] sm:px-4"
     type="button"
     id={`${title} accordion menu button`}
     aria-expanded="false"
