--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -4,7 +4,11 @@ import Accordion from "../components/Accordion.astro";
 import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
 import Layout from "../layouts/Layout.astro";
 const collection = await getCollection("faq");
-const faqs = collection.sort((a, b) => a.data.order - b.data.order);
+const faqs = collection.sort((a, b) => {
+  const aNum = parseInt(a.id.split("-")[0]);
+  const bNum = parseInt(b.id.split("-")[0]);
+  return aNum - bNum;
+});
 ---
 
 <Layout title={SITE_TITLE} description={SITE_DESCRIPTION}>
