--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -68,11 +68,12 @@
       }
     }
     ol {
-      @apply my-1 list-inside list-decimal space-y-1 [&_ol]:pl-5 [&_ul]:pl-5;
+      @apply my-1 ml-6 list-decimal space-y-1 [&_ol]:pl-2 [&_ul]:pl-2;
     }
     ul {
-      @apply my-1 list-inside list-disc space-y-1 [&_ol]:pl-5 [&_ul]:pl-5;
+      @apply my-1 ml-6 list-disc space-y-1 [&_ol]:pl-2 [&_ul]:pl-2;
     }
+
     kbd {
       @apply rounded border border-b-2 bg-zinc-100 px-1 py-0.5 font-mono text-xs font-medium text-black dark:border-zinc-700 dark:bg-zinc-800 dark:text-white;
     }
