--- a/src/pages/support.astro
+++ b/src/pages/support.astro
@@ -4,28 +4,25 @@ import Accordion from "../components/Accordion.astro";
 import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
 import Layout from "../layouts/Layout.astro";
 const collection = await getCollection("support");
-const support = await Promise.all(
-  collection
-    .sort((a, b) => a.data.order - b.data.order)
-    .map(async (support) => {
-      const { Content } = await support.render();
-      return {
-        title: support.data.title,
-        Content,
-      };
-    })
-);
+const support = collection.sort((a, b) => {
+  const aNum = parseInt(a.id.split("-")[0]);
+  const bNum = parseInt(b.id.split("-")[0]);
+  return aNum - bNum;
+});
 ---
 
 <Layout title={SITE_TITLE} description={SITE_DESCRIPTION}>
   <main>
     <div class="flex flex-col gap-4">
       {
-        support.map((item) => (
-          <Accordion title={item.title}>
-            <item.Content />
-          </Accordion>
-        ))
+        support.map(async (support) => {
+          const { Content } = await support.render();
+          return (
+            <Accordion title={support.data.title}>
+              <Content />
+            </Accordion>
+          );
+        })
       }
     </div>
   </main>
