--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,11 @@ import Layout from "../layouts/Layout.astro";
   className="flex h-svh max-w-sm flex-col justify-center"
 >
   <main class="space-y-4">
-    <img src="/static/bhante.png" alt="Bhante Guṇavīro" class="rounded-lg" />
+    <img
+      src="/static/bhante.png"
+      alt="Bhante Guṇavīro"
+      class="h-48 w-full rounded-lg object-cover"
+    />
     <p>
       Welcome to our community website dedicated to following and supporting <span
         class="font-semibold">Guṇavīro Bhikkhu</span
@@ -21,22 +25,20 @@ import Layout from "../layouts/Layout.astro";
       guidance for those who wish to stay connected with his journey and support
       his practice.
     </p>
+
     <p>
-      For a list of all recent articles, please visit the <a
-        href="/posts"
-        class="text-blue-500 underline">Posts</a
-      > page.
-    </p>
-    <p>
-      For questions, offerings of support, or to join our WhatsApp group, please
-      email <a href="mailto:bgkappiya@gmail.com" class="text-blue-500 underline"
-        >bgkappiya@gmail.com</a
-      >.
+      For questions, offerings of support, or to receive updates via WhatsApp or
+      email, please contact
+      <a href="mailto:bgkappiya@gmail.com" class="text-blue-500 underline">
+        bgkappiya@gmail.com
+      </a>.
     </p>
 
     <p>
       A lay supporter will do their best to convey your message to Bhante when
-      possible, though he may sometimes be on retreat or unavailable.
+      possible, though this may take some time if he is on retreat or
+      unavailable. If you simply wish to be added to our email list or WhatsApp
+      group for occasional updates, please let us know.
     </p>
     <p>
       This website is open-source, and you can find the code on our <a
