--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -80,5 +80,8 @@
     mark {
       @apply dark:bg-yellow-500/50 dark:text-white;
     }
+    hr {
+      @apply mx-auto my-4 h-1 w-48 rounded-sm border-0 bg-gray-100 dark:bg-gray-700 md:my-10;
+    }
   }
 }
