--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -27,3 +27,7 @@ const faqs = collection.sort((a, b) => {
     </div>
   </main>
 </Layout>
+
+<script>
+  import "../scripts/accordion.js";
+</script>
