Remove extra line

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,8 +37,7 @@ import Layout from "../layouts/Layout.astro";
     <p>
       A lay supporter will do their best to convey your message to Bhante when
       possible, though this may take some time if he is on retreat or
-      unavailable. If you simply wish to be added to our email list or WhatsApp
-      group for occasional updates, please let us know.
+      unavailable.
     </p>
     <p>
       This website is open-source, and you can find the code on our <a
