--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
-import { Content } from "../content/pages/updates.md";
+import { Content } from "../content/pages/about.md";
 import Layout from "../layouts/Layout.astro";
 ---
 
