--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -12,7 +12,8 @@ const faqs = collection.sort((a, b) => {
 ---
 
 <Layout title={SITE_TITLE} description={SITE_DESCRIPTION}>
-  <main>
+  <article>
+    <h2>FAQ</h2>
     <div class="flex flex-col gap-4">
       {
         faqs.map(async (faq) => {
@@ -25,7 +26,7 @@ const faqs = collection.sort((a, b) => {
         })
       }
     </div>
-  </main>
+  </article>
 </Layout>
 
 <script>
