--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -6,12 +6,15 @@ import { formatDate } from "../../lib/utils";
 
 const collection = await getCollection("posts");
 const posts = collection.sort(
-  (a, b) => b.data.date.valueOf() - a.data.date.valueOf(),
+  (a, b) => b.data.date.valueOf() - a.data.date.valueOf()
 );
 ---
 
 <Layout title={SITE_TITLE} description={SITE_DESCRIPTION}>
   <main>
+    <article>
+      <h2>Posts</h2>
+    </article>
     <ul class="flex flex-col gap-1.5">
       {
         posts.map((post) => (
