--- a/src/pages/support.astro
+++ b/src/pages/support.astro
@@ -12,7 +12,8 @@ const support = collection.sort((a, b) => {
 ---
 
 <Layout title={SITE_TITLE} description={SITE_DESCRIPTION}>
-  <main>
+  <article>
+    <h2>Support</h2>
     <div class="flex flex-col gap-4">
       {
         support.map(async (support) => {
@@ -25,7 +26,7 @@ const support = collection.sort((a, b) => {
         })
       }
     </div>
-  </main>
+  </article>
 </Layout>
 
 <script>
