--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -22,12 +22,23 @@ const { Content } = await post.render();
   image={post.data.image}
 >
   <main>
-    <h1 class="mb-5 text-xl font-medium">
-      {post.data.title}
-    </h1>
-    <p class="mb-1 font-medium text-zinc-500">
-      {formatDate(post.data.date)}
-    </p>
+    <div class="flex items-start justify-between">
+      <div>
+        <p class="mb-1 font-medium text-zinc-500">
+          {formatDate(post.data.date)}
+        </p>
+        <h1 class="mb-2 text-xl font-medium">
+          {post.data.title}
+        </h1>
+      </div>
+      <a
+        href={`/pdfs/${post.slug}.pdf`}
+        class="rounded bg-blue-800 px-2 py-1 text-sm font-semibold text-white underline"
+      >
+        PDF Version
+      </a>
+    </div>
+
     <article>
       <Content />
     </article>
