--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import { Content } from "../content/pages/index.md";
 <Layout
   title={SITE_TITLE}
   description={SITE_DESCRIPTION}
-  className="flex h-svh max-w-lg flex-col justify-center"
+  className="flex max-w-lg flex-col justify-center sm:h-svh"
 >
   <main class="space-y-4">
     <div class="flex items-center gap-2">
