--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,12 +13,12 @@ import { Content } from "../content/pages/index.md";
   <main class="space-y-4">
     <div class="flex items-center gap-2">
       <img
-        src="/static/bhante.png"
+        src="/static/bhante-1.png"
         alt="Bhante"
         class="h-36 w-full rounded-md border border-zinc-500/50 object-cover"
       />
       <img
-        src="/static/leaf.png"
+        src="/static/bhante-2.png"
         alt="Leaf"
         class="h-36 w-full rounded-md border border-zinc-500/50 object-cover"
       />
