--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ import ThemeToggle from "./ThemeToggle.astro";
 >
   <nav class="flex items-center gap-4">
     <a href="/"> home </a>
-    <a href="/dhamma"> dhamma </a>
+    <!-- <a href="/dhamma"> dhamma </a> -->
     <a href="/updates"> updates </a>
     <a href="/translations"> translations </a>
     <a href="/support"> support </a>
