--- a/src/pages/translations/index.astro
+++ b/src/pages/translations/index.astro
@@ -3,7 +3,7 @@ import { getCollection } from "astro:content";
 import { SITE_DESCRIPTION, SITE_TITLE } from "../../consts";
 import Layout from "../../layouts/Layout.astro";
 
-const collection = await getCollection("translations");
+const collection = await getCollection("translation");
 const posts = collection.sort(
   (a, b) => b.data.date.valueOf() - a.data.date.valueOf()
 );
