--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ import ThemeToggle from "./ThemeToggle.astro";
     <a href="/"> home </a>
     <!-- <a href="/dhamma"> dhamma </a> -->
     <a href="/updates"> updates </a>
-    <a href="/translations"> translations </a>
+    <!-- <a href="/translations"> translations </a> -->
     <a href="/support"> support </a>
     <a href="/faq"> faq </a>
     <a href="/about"> about </a>
