--- a/src/pages/dhamma/index.astro
+++ b/src/pages/dhamma/index.astro
@@ -2,31 +2,42 @@
 import { getCollection } from "astro:content";
 import { SITE_DESCRIPTION, SITE_TITLE } from "../../consts";
 import Layout from "../../layouts/Layout.astro";
-import { formatDate } from "../../lib/utils";
-
-const collection = await getCollection("dhamma");
-const posts = collection.sort(
-  (a, b) => b.data.date.valueOf() - a.data.date.valueOf()
-);
+const dhammaPosts = await getCollection("dhamma");
+const translationPosts = await getCollection("translation");
 ---
 
 <Layout title={SITE_TITLE} description={SITE_DESCRIPTION}>
   <main>
     <article>
-      <h2>Dhamma</h2>
+      <h2>Dhamma Reflections</h2>
     </article>
     <ul class="flex flex-col gap-1.5">
       {
-        posts.map((post) => (
+        dhammaPosts.map((post) => (
           <li>
             <a
               href={`/dhamma/${post.slug}`}
               class="group flex justify-between gap-3"
             >
               <span class="group-hover:underline">{post.data.title}</span>
-              <span class="text-nowrap text-zinc-500">
-                {formatDate(post.data.date)}
-              </span>
+            </a>
+          </li>
+        ))
+      }
+    </ul>
+
+    <article class="mt-8">
+      <h2>Translations</h2>
+    </article>
+    <ul class="flex flex-col gap-1.5">
+      {
+        translationPosts.map((post) => (
+          <li>
+            <a
+              href={`/translations/${post.slug}`}
+              class="group flex justify-between gap-3"
+            >
+              <span class="group-hover:underline">{post.data.title}</span>
             </a>
           </li>
         ))
