--- a/src/pages/translations/index.astro
+++ b/src/pages/translations/index.astro
@@ -3,10 +3,7 @@ import { getCollection } from "astro:content";
 import { SITE_DESCRIPTION, SITE_TITLE } from "../../consts";
 import Layout from "../../layouts/Layout.astro";
 
-const collection = await getCollection("translation");
-const posts = collection.sort(
-  (a, b) => b.data.date.valueOf() - a.data.date.valueOf()
-);
+const posts = await getCollection("translation");
 ---
 
 <Layout title={SITE_TITLE} description={SITE_DESCRIPTION}>
@@ -23,7 +20,6 @@ const posts = collection.sort(
               class="group flex justify-between gap-3"
             >
               <span class="group-hover:underline">{post.data.title}</span>
-              <span class="text-nowrap text-zinc-500">{post.data.date}</span>
             </a>
           </li>
         ))
