--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,9 +22,11 @@ const {
 } = Astro.props;
 
 const showBackNav =
-  currentPath.startsWith("/dhamma") || currentPath.startsWith("/translations");
-const isDhammaPost = /^\/dhamma\/[^/]+/.test(currentPath);
+  currentPath.startsWith("/thequality") ||
+  currentPath.startsWith("/translations");
+const isTheQualityPost = /^\/thequality\/[^/]+/.test(currentPath);
 const isTranslationPost = /^\/translations\/[^/]+/.test(currentPath);
+const isIndividualPost = isTheQualityPost || isTranslationPost;
 ---
 
 <html lang="en">
@@ -83,21 +85,10 @@ const isTranslationPost = /^\/translations\/[^/]+/.test(currentPath);
         showBackNav ? (
           <nav class="mb-3 pb-3">
             <a
-              href={
-                isDhammaPost
-                  ? "/dhamma"
-                  : isTranslationPost
-                    ? "/translations"
-                    : "/"
-              }
+              href={isIndividualPost ? "/thequality" : "/"}
               class="font-medium text-zinc-500 hover:text-zinc-900 hover:underline dark:hover:text-zinc-100"
             >
-              ←{" "}
-              {isDhammaPost
-                ? "Back to Dhamma"
-                : isTranslationPost
-                  ? "Back to Translations"
-                  : "Back to Main Site"}
+              ← {isIndividualPost ? "Back to The Quality" : "Back to Main Site"}
             </a>
           </nav>
         ) : (
